# CISC472_SpineSegmentation

./: .gitignore  CMakeLists.txt  readme.md
SpineSegmentation/: CMakeLists.txt  SpineSegmentation.py
